[package]
name = "rampart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
rpassword = "7.2.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
aes = "0.7"
block-modes = "0.8"
base64 = "0.21.2"
hex-literal = "0.4.1"